--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
             <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
           </dl>
         </li>
-        <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span class="iconfont icon-tuichu"></span>退出</a></li>
+        <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span
+              class="iconfont icon-tuichu"></span>退出</a></li>
       </ul>
     </div>
 
     <div class="layui-side layui-bg-black">
       <div class="layui-side-scroll">
-        <div  class="userinfo">
+        <div class="userinfo">
           <img src="/assets/images/sample.jpg" class="layui-nav-img" />
           <span class="text-avatar">A</span>
-         <span id="welcome">欢迎 ***</span>
+          <span id="welcome">欢迎 ***</span>
         </div>
         <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
         <ul class="layui-nav layui-nav-tree" lay-shrink="all">
@@ -51,9 +52,9 @@
           <li class="layui-nav-item ">
             <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
+              <dd><a href="/article/art_cate.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
+              <dd><a href="/article/art_list.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+              <dd><a href="/article/art_pub.html" target="fm"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item">
@@ -83,9 +84,9 @@
   <script src="/assets/lib/layui/layui.all.js"></script>
   <!--  导入 jQuery -->
   <script src="/assets/lib/jquery.js"></script>
-   <!-- 导入自己封装的 baseAPI -->
-   <script src="/assets/js/baseAPI.js"></script>
-   <!-- 导入自己的 js 文件 -->
+  <!-- 导入自己封装的 baseAPI -->
+  <script src="/assets/js/baseAPI.js"></script>
+  <!-- 导入自己的 js 文件 -->
   <script src="/assets/js/index.js"></script>
 </body>
 
