--- a/article/art_pub.html
+++ b/article/art_pub.html
@@ -16,7 +16,8 @@
       <div class="layui-card-header">写文章</div>
       <div class="layui-card-body">
          <!-- 发布文章的表单 -->
-         <form class="layui-form" id="form-pub">
+         <form class="layui-form" id="form-pub"
+         >
             <!-- 第一行 -->
             <div class="layui-form-item">
                <label class="layui-form-label">文章标题</label>
