--- a/article/art_list.html
+++ b/article/art_list.html
@@ -64,15 +64,16 @@
         <td>{{$value.pub_date|dataFormat}}</td>
         <td>{{$value.state}}</td>
         <td>
-          <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+         <a href="/article/art_edit.html?id={{$value.Id}}" target="fm" class="layui-btn layui-btn-xs">编辑</a>
+          <!-- <button type="button" class="layui-btn layui-btn-xs">编辑</button> -->
           <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete" data-id="{{$value.Id}}">删除</button>
         </td>
       </tr>
       {{/each}}
     </script>
 
-    <!-- 定义分类可选项的模板结构： -->
-    <script type="text/html" id="tpl-cate">
+   <!-- 定义分类可选项的模板结构： -->
+   <script type="text/html" id="tpl-cate">
       <option value="">所有分类</option>
       {{each data}}
       <option value="{{$value.Id}}">{{$value.name}}</option>
